perf: update img

--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12895,7 +12895,7 @@ body {
 }
 
 .home-nav-btn.btn-real.active {
-  background-image: url("../../assets/img/btn-sport.png") !important;
+  background-image: url("../../assets/img/btn-real-active.svg") !important;
   background-size: cover !important;
 }
 
@@ -12905,7 +12905,7 @@ body {
 }
 
 .home-nav-btn.btn-electron.active {
-  background-image: url("../../assets/img/btn-sport.png") !important;
+  background-image: url("../../assets/img/btn-electron-active.svg") !important;
   background-size: cover !important;
 }
 
@@ -12915,7 +12915,7 @@ body {
 }
 
 .home-nav-btn.btn-lottery.active {
-  background-image: url("../../assets/img/btn-sport.png") !important;
+  background-image: url("../../assets/img/btn-lottery-active.svg") !important;
   background-size: cover !important;
 }
 
@@ -12925,7 +12925,7 @@ body {
 }
 
 .home-nav-btn.btn-chess.active {
-  background-image: url("../../assets/img/btn-sport.png") !important;
+  background-image: url("../../assets/img/btn-chess-active.svg") !important;
   background-size: cover !important;
 }
 
@@ -12935,7 +12935,7 @@ body {
 }
 
 .home-nav-btn.btn-game.active {
-  background-image: url("../../assets/img/btn-sport.png") !important;
+  background-image: url("../../assets/img/btn-game-active.svg") !important;
   background-size: cover !important;
 }
 
