--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -75,7 +75,7 @@
     background-image: url("../../assets/img/btn-real.png") !important;
     background-size: cover !important;
     &.active {
-      background-image: url("../../assets/img/btn-sport.png") !important;
+      background-image: url("../../assets/img/btn-real-active.svg") !important;
       background-size: cover !important;
     }
   }
@@ -83,7 +83,7 @@
     background-image: url("../../assets/img/btn-electron.png") !important;
     background-size: cover !important;
     &.active {
-      background-image: url("../../assets/img/btn-sport.png") !important;
+      background-image: url("../../assets/img/btn-electron-active.svg") !important;
       background-size: cover !important;
     }
   }
@@ -91,7 +91,7 @@
     background-image: url("../../assets/img/btn-lottery.png") !important;
     background-size: cover !important;
     &.active {
-      background-image: url("../../assets/img/btn-sport.png") !important;
+      background-image: url("../../assets/img/btn-lottery-active.svg") !important;
       background-size: cover !important;
     }
   }
@@ -99,7 +99,7 @@
     background-image: url("../../assets/img/btn-chess.png") !important;
     background-size: cover !important;
     &.active {
-      background-image: url("../../assets/img/btn-sport.png") !important;
+      background-image: url("../../assets/img/btn-chess-active.svg") !important;
       background-size: cover !important;
     }
   }
@@ -107,7 +107,7 @@
     background-image: url("../../assets/img/btn-game.png") !important;
     background-size: cover !important;
     &.active {
-      background-image: url("../../assets/img/btn-sport.png") !important;
+      background-image: url("../../assets/img/btn-game-active.svg") !important;
       background-size: cover !important;
     }
   }
