--- a/scss/components/_form.scss
+++ b/scss/components/_form.scss
@@ -114,7 +114,7 @@ input#Bank {
   background-color: #f1dcb7;
 }
 input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 30px #f5f5f5 inset;
+  -webkit-box-shadow: 0 0 0 30px #f5f5f5 inset !important;
 }
 .form-label {
   margin-bottom: 2px;
