refat: file root
refact: css & js file root

refact: css & js file root

refact: css & js file root

fix: bottom nav path

fix: bottom nav path

--- a/scss/components/_custom.scss
+++ b/scss/components/_custom.scss
@@ -23,7 +23,7 @@ html {
 }
 .custom_bg_img {
   min-height: 160px;
-  background-image: url("/assets/img/account_bg.svg");
+  background-image: url("./assets/img/account_bg.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
