--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12502,7 +12502,7 @@ html {
 
 .custom_bg_img {
   min-height: 160px;
-  background-image: url("/assets/img/account_bg.svg");
+  background-image: url("./assets/img/account_bg.svg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -13197,8 +13197,6 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding-left: 15px;
-  -webkit-transform: translateY(-12px);
-          transform: translateY(-12px);
 }
 
 .vip-info-wrap .info-header .header-title {
@@ -13207,7 +13205,7 @@ body {
 }
 
 .vip-info-wrap .info-progress {
-  margin-top: -6px;
+  margin-top: 10px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -13295,7 +13293,7 @@ body {
 }
 
 .vip-info-wrap .wallet-info-wrap {
-  margin: 15px;
+  margin: 14px;
   height: 83px;
   background: #fff;
   -webkit-box-shadow: 0px 3px 6px #8c5f0633;
