--- a/scss/components/_badge_btn.scss
+++ b/scss/components/_badge_btn.scss
@@ -1,14 +1,14 @@
 .badge_btns {
-    width: 95px;
-    height: 26px;
-    margin-right: 15px;
-    justify-content: space-between;
-    line-height: 23px;
-    background-image: url('../../assets/img/button-wrap.svg');
-    .start_btn {
-        color: $white;
-    }
-    .end_btn {
-        color: $primary;
-    }
+  width: 95px;
+  height: 26px;
+  justify-content: space-between;
+  padding: 0 12px;
+  line-height: 23px;
+  background-image: url("../../assets/img/button-wrap.svg");
+  .start_btn {
+    color: $white;
+  }
+  .end_btn {
+    color: $primary;
+  }
 }
