--- a/assets/css/all.css
+++ b/assets/css/all.css
@@ -12165,6 +12165,28 @@ fieldset:disabled .btn {
   min-height: 50vh;
 }
 
+.products-inner .isFix {
+  position: relative;
+  pointer-events: none;
+}
+
+.products-inner .isFix::after {
+  content: "";
+  position: absolute;
+  background-image: url("../../assets/img/is-fix.svg");
+  background-repeat: no-repeat;
+  right: 50%;
+  top: 50%;
+  -webkit-transform: translate(50%, -50%);
+          transform: translate(50%, -50%);
+  width: 100px;
+  height: 36px;
+}
+
+.products-inner .isFix img {
+  opacity: 0.5;
+}
+
 .navbar {
   border-radius: 20px 20px 0 0;
   -webkit-box-shadow: 0px -3px 6px #00000017;
