--- a/scss/all.scss
+++ b/scss/all.scss
@@ -78,6 +78,7 @@
 @import "components/offcanvas";
 @import "components/buttons";
 @import "components/toast";
+@import "components/loader";
 
 @import "pages/home";
 @import "pages/promotions";
